[gd_scene load_steps=14 format=3 uid="uid://cu0n05p4spkcb"]

[ext_resource type="Script" path="res://environments/environment.gd" id="1_6g3cj"]
[ext_resource type="PackedScene" uid="uid://ndpd1xkg8gor" path="res://encounters/npc_encounter.tscn" id="2_dt8cx"]
[ext_resource type="Texture2D" uid="uid://d3sk8eyxlui45" path="res://environments/assets/env_06.png" id="3_sr538"]
[ext_resource type="Script" path="res://environments/game_camera.gd" id="4_x12ic"]
[ext_resource type="Script" path="res://environments/z_scaler.gd" id="5_ah76c"]
[ext_resource type="Script" path="res://environments/npc_spawner.gd" id="6_ba4bq"]
[ext_resource type="Script" path="res://environments/exit_trigger.gd" id="6_c0g33"]
[ext_resource type="PackedScene" uid="uid://bihf2ljwlb42y" path="res://npcs/gretchen/gretchen_sprite.tscn" id="7_svbhx"]
[ext_resource type="PackedScene" uid="uid://draw6d8dxgu4k" path="res://npcs/marcie/marcie_sprite.tscn" id="8_2fw8y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uqedg"]
size = Vector2(1988, 76)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jkws"]
size = Vector2(207.374, 58.4548)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h4t0b"]
size = Vector2(233.688, 45)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_wkrmp"]
vertices = PackedVector2Array(1573.42, 845.883, 1582.48, 1026.95, 25.0781, 1021.03, 27.9063, 681.953, 247.43, 681)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4)])
outlines = Array[PackedVector2Array]([PackedVector2Array(248, 671, 1583, 837, 1593, 1037, 15, 1031, 18, 672)])

[node name="Environment_06" type="Node2D"]
script = ExtResource("1_6g3cj")
camera_upper_y = 267
camera_lower_y = 829
camera_left_x = 464
camera_right_x = 1459
encounter_scene = ExtResource("2_dt8cx")
environment_background_filename = "env_06.png"
encounter_background_filename = "01.png"

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_sr538")

[node name="GameCamera" type="Camera2D" parent="."]
position = Vector2(1459, 829)
zoom = Vector2(1.5, 1.5)
script = ExtResource("4_x12ic")

[node name="ZScaler" type="Node2D" parent="." node_paths=PackedStringArray("top_marker", "bottom_marker")]
script = ExtResource("5_ah76c")
top_marker = NodePath("../TopMarker")
bottom_marker = NodePath("../BottomMarker")
scale_at_top = 0.15
scale_at_bottom = 0.6

[node name="TopMarker" type="Marker2D" parent="."]
position = Vector2(242, 650)

[node name="BottomMarker" type="Marker2D" parent="."]
position = Vector2(491, 1071)

[node name="NorthPlayerStart01" type="Marker2D" parent="."]
position = Vector2(1073, 720)

[node name="NorthPlayerStart02" type="Marker2D" parent="."]
position = Vector2(795, 682)

[node name="AllyHolder" type="Node2D" parent="."]

[node name="NpcHolder" type="Node2D" parent="."]

[node name="PropHolder" type="Node2D" parent="."]

[node name="EnvironmentBlockers" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnvironmentBlockers"]
position = Vector2(967, 1091)
shape = SubResource("RectangleShape2D_uqedg")

[node name="ExitTriggerHolder" type="Node2D" parent="."]

[node name="NorthExitTrigger01" type="Area2D" parent="ExitTriggerHolder"]
script = ExtResource("6_c0g33")
exit_to_scene_name = "environment_01.tscn"
player_start_name = "NorthExitPlaceholdrMarker02"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitTriggerHolder/NorthExitTrigger01"]
position = Vector2(822.331, 639.176)
rotation = 0.0802851
shape = SubResource("RectangleShape2D_7jkws")

[node name="NorthExitTrigger02" type="Area2D" parent="ExitTriggerHolder"]
script = ExtResource("6_c0g33")
exit_to_scene_name = "environment_01.tscn"
player_start_name = "NorthExitPlaceholdrMarker01"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitTriggerHolder/NorthExitTrigger02"]
position = Vector2(1095.14, 667.08)
rotation = 0.0802851
shape = SubResource("RectangleShape2D_h4t0b")

[node name="NpcSpawner" type="Node" parent="."]
script = ExtResource("6_ba4bq")
npc_scenes = Array[PackedScene]([ExtResource("7_svbhx"), ExtResource("8_2fw8y")])

[node name="SpawnMarkers" type="Node2D" parent="NpcSpawner"]

[node name="Marker2D" type="Marker2D" parent="NpcSpawner/SpawnMarkers"]
position = Vector2(151, 834)

[node name="Marker2D2" type="Marker2D" parent="NpcSpawner/SpawnMarkers"]
position = Vector2(1484, 978)

[node name="Marker2D3" type="Marker2D" parent="NpcSpawner/SpawnMarkers"]
position = Vector2(462, 990)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_wkrmp")

[node name="CenterMarker" type="Marker2D" parent="NavigationRegion2D"]
position = Vector2(674, 856)

[connection signal="body_entered" from="ExitTriggerHolder/NorthExitTrigger01" to="ExitTriggerHolder/NorthExitTrigger01" method="_on_body_entered"]
[connection signal="body_entered" from="ExitTriggerHolder/NorthExitTrigger02" to="ExitTriggerHolder/NorthExitTrigger02" method="_on_body_entered"]
